# component-model

interpreter/: default.nix  dune  wasm_components.opam
interpreter/script/: run.ml
interpreter/syntax/: ast.ml  type_resolved.ml
interpreter/text/: desugar.ml  dune  lexer.mll  parse.ml  parser.mly
interpreter/valid/: elaborate.ml  etypes.ml  substitute.ml  subtype.mli  valid.ml
