opam-version: "2.0"
maintainer: "Daniel Patterson <dbp@dbpmail.net>"
authors: "Daniel Patterson <dbp@dbpmail.net>"
homepage: "https://github.com/dbp/components"
bug-reports: "https://github.com/dbp/components/issues"
license: "Apache-2.0"
dev-repo: "git+https://github.com/dbp/components.git"
build: [
  ["dune" "build" "-p" name "-j" jobs
                            "@install"
                            "@doc" {with-doc}
  "@runtest" {with-test} ]
]
depends: [
  "ocaml" {>= "4.08.0" & < "4.13"}
  "dune" {>= "2.9.1"}
  "wasm" {>= "1.1.1"}
]
synopsis:
    "Library to read and write WebAssembly (Wasm) files and manipulate their AST"
url {
  src: "https://github.com/WebAssembly/spec/archive/opam-1.1.1.zip"
       checksum: "md5=331c984a40d2f37524a10d70f427abf7"
}
